--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.5.5",
+    "@navjobs/upload": "^3.2.0",
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
@@ -21,6 +22,7 @@
     "date-fns": "^2.0.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
+    "emoji-mart": "^2.11.1",
     "eslint": "^6.1.0",
     "eslint-config-react-app": "^5.0.1",
     "eslint-loader": "2.2.1",
@@ -82,6 +84,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "http://localhost:1337",
   "browserslist": {
     "production": [
       ">0.2%",
