--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-string-replace": "^0.4.4",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "reset-css": "^4.0.1",
