--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-string-replace": "^0.4.4",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "reset-css": "^4.0.1",
