--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jest-watch-typeahead": "0.3.1",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "0.5.0",
+    "mongoose": "^5.7.7",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
