--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@babel/core": "7.5.5",
     "@navjobs/upload": "^3.2.0",
     "@svgr/webpack": "4.3.2",
-    "@typescript-eslint/eslint-plugin": "1.13.0",
+    "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "1.13.0",
     "antd": "^3.22.0",
     "axios": "^0.19.0",
@@ -31,13 +31,15 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
+    "eslint-utils": "^1.4.3",
     "file-loader": "3.0.1",
     "formik": "^1.5.8",
     "fs-extra": "7.0.1",
+    "handlebars": "^4.5.1",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
-    "jest": "24.8.0",
+    "jest": "^24.9.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
