--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://localhost:1337",
+  "proxy": "http://slim-chat.herokuapp.com",
   "browserslist": {
     "production": [
       ">0.2%",
